--- a/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
@@ -6,6 +6,7 @@
             <th>Cantidad Filas</th>
             <th>Cantidad Columnas</th>
             <th>Precio de la Entrada</th>
+            <th>Opciones</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-room>
