--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -15,7 +15,7 @@
             <td>{{cinema.name}}</td>
             <td>{{cinema.address}}</td>
             <td>{{cinema.rooms.length}}</td>
-            <td>0</td>
+            <td>{{cinema.movies.length}}</td>
             <td class="flex">
                 <p-button label="Editar" (onClick)="handleEdit(cinema)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
