--- a/frontend/src/app/modules/management/management.component.html
+++ b/frontend/src/app/modules/management/management.component.html
@@ -1,2 +1,7 @@
 <p>management works!</p>
-<app-option-card></app-option-card>
+
+<div class="flex justify-content-center ">
+    <div class="mr-4" *ngFor="let option of options; index as i" >
+        <app-option-card [option]="option"></app-option-card>
+    </div>
+</div>
