actualizacion anidada de peliculas en cine cc

--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
@@ -4,7 +4,7 @@
         <form [formGroup]="cinemaForm">
             <div class="field">
                 <h4>Peliculas disponibles</h4>
-                <p-multiSelect [options]="movies" optionLabel="title" optionValue="_id" display="chip" formControlName="movies"></p-multiSelect>
+                <p-multiSelect [options]="movies" optionLabel="title" optionValue="_id" display="chip" formControlName="movies_ids"></p-multiSelect>
             </div>
             <div class="field">
                 <h4>Nombre</h4>
