--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -14,8 +14,8 @@
             <td>{{cinemas.indexOf(cinema) + 1}}</td>
             <td>{{cinema.name}}</td>
             <td>{{cinema.address}}</td>
-            <td>{{cinema.rooms.length}}</td>
-            <td>{{cinema.movies.length}}</td>
+            <td>{{cinema.rooms_ids.length}}</td>
+            <td>{{cinema.movies_ids.length}}</td>
             <td class="flex">
                 <p-button label="Editar" (onClick)="handleEdit(cinema)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
