HU29 ajuste de tamaño de inputs VC

--- a/frontend/src/app/modules/management/pages/profile/profile.component.html
+++ b/frontend/src/app/modules/management/pages/profile/profile.component.html
@@ -4,28 +4,28 @@
             <div class="field">
                 <h4>NOMBRE</h4>
                 <span class="p-float-label">
-                    <input type="text" id="name" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large">
+                    <input type="text" id="name" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large" style="width: 400px;">
                     <label for="name">{{profile.name}}</label>
                 </span>
             </div>
             <div class="field">
                 <h4>APELLIDOS</h4>
                 <span class="p-float-label">
-                    <input type="text" id="lastnames" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large">
+                    <input type="text" id="lastnames" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large" style="width: 400px;">
                     <label for="lastnames">{{profile.lastnames}}</label>
                 </span>
             </div>
             <div class="field">
                 <h4>TELEFONO</h4>
                 <span class="p-float-label">
-                    <input type="text" id="phone" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large">
+                    <input type="text" id="phone" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large" style="width: 400px;">
                     <label for="phone">{{profile.phone}}</label>
                 </span>
             </div>
             <div class="field">
                 <h4>EMAIL</h4>
                 <span class="p-float-label">
-                    <input type="text" id="email" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large">
+                    <input type="text" id="email" pInputText disabled="false" class="p-inputtext-lg" placeholder="Large" style="width: 400px;">
                     <label for="email">{{profile.email}}</label>
                 </span>
             </div>
