--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -3,6 +3,7 @@
         <tr>
             <th>Nro</th>
             <th>Nombre</th>
+            <th>Imagen</th>
             <th>Direccion</th>
             <th>Cantidad Salas</th>
             <th>Cantidad Peliculas</th>
@@ -13,13 +14,17 @@
         <tr>
             <td>{{cinemas.indexOf(cinema) + 1}}</td>
             <td>{{cinema.name}}</td>
+            <td>
+                <p-image [src]="URL_API + cinema.imagePath" height="75" [preview]="true"></p-image>
+            </td>
             <td>{{cinema.address}}</td>
             <td>{{cinema.rooms_ids.length}}</td>
             <td>{{cinema.movies_ids.length}}</td>
-            <td class="flex">
+            <td class="">
                 <p-button label="Editar" (onClick)="handleEdit(cinema)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
-                <p-button label="Eliminar" (onClick)="handleDelete(cinema._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
+                <p-button label="Eliminar" (onClick)="handleDelete(cinema._id)" iconPos="right" icon="pi pi-trash"
+                    styleClass="p-button-sm p-button-danger">
                 </p-button>
             </td>
         </tr>
