validaciones a cinemaform, creacion de estructura para cliente cc

--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
@@ -18,9 +18,10 @@
             </div>
             <div class="field">
                 <h4>Imagen</h4>
-                <p-fileUpload [auto]="true" (onSelect)="onFileChange($event)" removeStyleClass="p-button-sm"
-                    [fileLimit]="1" invalidFileLimitMessageSummary="Cantidad maxima de archivos excedida"
-                    chooseLabel="Seleccionar archivo"></p-fileUpload>
+                <p-fileUpload [auto]="true" (onSelect)="onFileChange($event)"
+                    removeStyleClass="p-button-sm p-button-danger" [fileLimit]="1"
+                    invalidFileLimitMessageSummary="Cantidad maxima de archivos excedida"
+                    chooseLabel="Seleccionar archivo" accept="image/*"></p-fileUpload>
             </div>
         </form>
     </ng-template>
