HU4 GUI Cartelera VC

--- a/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
+++ b/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
@@ -1,1 +1,20 @@
-<p>movie-card works!</p>
+<p-carousel [value]="movies" [numVisible]="3" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions">
+    <ng-template pTemplate="header">
+        <h5>CARTELERA</h5>
+    </ng-template>
+    <ng-template let-movie pTemplate="item">
+        <div class="product-item">
+            <div class="product-item-content">
+                <div class="mb-3">
+                    <img [src]="URL_API + movie.imagePath" [alt]="movie.title" class="product-image" />
+                </div>
+                <div>
+                    <h4 class="mb-1">{{movie.title}}</h4>
+                    <h6 class="mt-0 mb-3">Horarios: 18:00-20:10</h6>
+                    
+                    
+                </div>
+            </div>
+        </div>
+    </ng-template>
+</p-carousel>
