--- a/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
+++ b/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
@@ -6,7 +6,7 @@
         <div class="product-item">
             <div class="product-item-content">
                 <div class="mb-3">
-                    <img [src]="URL_API + movie.imagePath" [alt]="movie.title" class="product-image" />
+                    <img [src]="URL_API + movie.imagePath" [alt]="movie.title" class="product-image" [height]="500"/>
                 </div>
                 <div>
                     <h4 class="mb-1">{{movie.title}}</h4>
