refactorizacion de peliculas

--- a/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
@@ -35,7 +35,7 @@
                 <p-fileUpload [auto]="true" (onSelect)="onFileChange($event)"
                     removeStyleClass="p-button-sm p-button-danger" [fileLimit]="1"
                     invalidFileLimitMessageSummary="Cantidad maxima de archivos excedida"
-                    chooseLabel="Seleccionar archivo"></p-fileUpload>
+                    chooseLabel="Seleccionar archivo" accept="image/*"></p-fileUpload>
             </div>
             <div class="field">
                 <h4>Trailer</h4>
