--- a/frontend/src/app/shared/components/option-card/option-card.component.html
+++ b/frontend/src/app/shared/components/option-card/option-card.component.html
@@ -1,9 +1,7 @@
-<a [routerLink]="option.url">
+<a [routerLink]="option.url" sty>
     <p-card header={{option.title}} [style]="{width: '360px'}" styleClass="p-card-shadow">
         <ng-template pTemplate="header">
             <img alt="Card" src={{option.imagePath}} height="200">
         </ng-template>
     </p-card>
 </a>
-
-
