Creacion de funciones implementada *Falta pruebas cc

--- a/frontend/src/app/modules/admin/admin.component.html
+++ b/frontend/src/app/modules/admin/admin.component.html
@@ -1,5 +1,5 @@
-<div class="flex align-items-stretch flex-wrap justify-content-center card-container">
-    <div class="mr-4" *ngFor="let option of options; index as i" >
+<div class="flex flex-wrap justify-content-center">
+    <div class="mr-4" *ngFor="let option of options; index as i">
         <app-option-card [option]="option"></app-option-card>
     </div>
 </div>
