--- a/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
@@ -5,7 +5,7 @@
             <div class="field">
                 <h4>Cine</h4>
                 <p-dropdown placeholder="Seleccione el cine correspondiente" [options]="cinemas" optionLabel="name"
-                    optionValue="_id" formControlName="cinema_id" [disabled]="editMode"></p-dropdown>
+                    optionValue="_id" formControlName="cinema_id" appendTo="body"></p-dropdown>
             </div>
             <div class="field">
                 <h4>Numero de Sala</h4>
