--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
@@ -5,7 +5,7 @@
             <div class="field">
                 <h4>Peliculas disponibles</h4>
                 <p-multiSelect [options]="movies" optionLabel="title" optionValue="_id" display="chip"
-                    formControlName="movies_ids" placeholder="Seleccione las peliculas disponibles en este cine">
+                    formControlName="movies_ids" placeholder="Seleccione las peliculas disponibles en este cine" appendTo="body">
                 </p-multiSelect>
             </div>
             <div class="field">
