--- a/frontend/src/app/modules/admin/pages/functions/components/function-table/function-table.component.html
+++ b/frontend/src/app/modules/admin/pages/functions/components/function-table/function-table.component.html
@@ -12,16 +12,17 @@
     </ng-template>
     <ng-template pTemplate="body" let-function_>
         <tr>
-            <td>{{function_.indexOf(function_)+1}}</td>
-            <td>{{function_.cinema_id}}</td>
-            <td>{{function_.room_id}}</td>
-            <td>{{function_.movie_id}}</td>
-            <td>{{function_.from}}</td>
-            <td>{{function_.to}}</td>
+            <td>{{functions.indexOf(function_) + 1}}</td>
+            <td>{{function_.cinema.name}}</td>
+            <td>{{function_.room.roomNum}}</td>
+            <td>{{function_.movie.title}}</td>
+            <td>{{function_.from | date:'shortTime'}}</td>
+            <td>{{function_.to | date:'shortTime'}}</td>
             <td>
                 <p-button label="Editar" (onClick)="handleShow(function_)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
-                <p-button label="Eliminar" (onClick)="handleDelete(function_._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
+                <p-button label="Eliminar" (onClick)="handleDelete(function_._id)" iconPos="right" icon="pi pi-trash"
+                    styleClass="p-button-sm p-button-danger">
                 </p-button>
             </td>
         </tr>
