Ordenamiento en tablas crud

--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -2,9 +2,9 @@
     <ng-template pTemplate="header">
         <tr>
             <th>Nro</th>
-            <th>Nombre</th>
+            <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
             <th>Imagen</th>
-            <th>Direccion</th>
+            <th pSortableColumn="address">Direccion <p-sortIcon field="address"></p-sortIcon></th>
             <th>Cantidad Salas</th>
             <th>Cantidad Peliculas</th>
             <th>Opciones</th>
