--- a/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
@@ -2,11 +2,11 @@
     <ng-template pTemplate="header">
         <tr>
             <th>Nro</th>
-            <th>Titulo</th>
+            <th pSortableColumn="title">Titulo <p-sortIcon field="title"></p-sortIcon></th>
             <th>Portada</th>
-            <th>Genero</th>
-            <th>Clasificacion</th>
-            <th>Duracion</th>
+            <th pSortableColumn="genre">Genero <p-sortIcon field="genre"></p-sortIcon></th>
+            <th pSortableColumn="rating">Clasificacion <p-sortIcon field="rating"></p-sortIcon></th>
+            <th pSortableColumn="length">Duracion <p-sortIcon field="length"></p-sortIcon></th>
             <th>Opciones</th>
         </tr>
     </ng-template>
@@ -19,7 +19,7 @@
             </td>
             <td>{{movie.genre}}</td>
             <td>{{movie.rating}}</td>
-            <td>{{movie.length}}</td>
+            <td>{{movie.length}} mins</td>
             <td>
                 <p-button label="Editar" (onClick)="handleEdit(movie)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
