login creado en frontend y backend cc

--- a/frontend/src/app/modules/management/pages/users/components/user-form/user-form.component.html
+++ b/frontend/src/app/modules/management/pages/users/components/user-form/user-form.component.html
@@ -27,7 +27,7 @@
             <div class="field">
                 <h4>Rol</h4>
                 <p-dropdown [options]="roles" optionLabel="name" optionValue="code" placeholder="Selecione un rol"
-                    formControlName="rol" appendTo="body"></p-dropdown>
+                    formControlName="role" appendTo="body"></p-dropdown>
             </div>
             <div *ngIf="!editMode">
                 <div class="field">
