--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<p-toast></p-toast>
+<p-confirmDialog [style]="{width: '450px'}" rejectButtonStyleClass="p-button-danger" acceptLabel="Si"></p-confirmDialog>
 <div class="mx-8">
     <router-outlet></router-outlet>
 </div>
