--- a/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
+++ b/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
@@ -6,7 +6,7 @@
             <th pSortableColumn="lastnames">Apellidos <p-sortIcon field="lastnames"></p-sortIcon></th>
             <th pSortableColumn="phone">Telefono <p-sortIcon field="phone"></p-sortIcon></th>
             <th pSortableColumn="email">Email <p-sortIcon field="email"></p-sortIcon></th>
-            <th pSortableColumn="rol">Rol <p-sortIcon field="rol"></p-sortIcon></th>
+            <th pSortableColumn="role">Rol <p-sortIcon field="role"></p-sortIcon></th>
             <th>Opciones</th>
         </tr>
     </ng-template>
@@ -17,7 +17,7 @@
             <td>{{user.lastnames}}</td>
             <td>{{user.phone}}</td>
             <td>{{user.email}}</td>
-            <td>{{user.rol}}</td>
+            <td>{{user.role}}</td>
             <td class="flex">
                 <p-button label="Editar" (onClick)="handleEdit(user)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
