--- a/frontend/src/app/shared/components/option-card/option-card.component.html
+++ b/frontend/src/app/shared/components/option-card/option-card.component.html
@@ -1,6 +1,6 @@
 <div class="mx-2 my-4">
     <a [routerLink]="option.url" class="no-underline">
-        <p-card [style]="{width: '360px', height: '275px'}" styleClass="transition-colors transition-duration-200 surface-200 hover:surface-400">
+        <p-card [style]="{width: '360px', height: '275px'}" styleClass="transition-colors transition-duration-200 bg-red-600 hover:bg-red-400">
             <ng-template pTemplate="header">
                 <img alt="Card" src={{option.imagePath}} width="100%" height="200">
             </ng-template>
