--- a/frontend/src/app/modules/client/pages/theaters/theaters.component.html
+++ b/frontend/src/app/modules/client/pages/theaters/theaters.component.html
@@ -1,6 +1,5 @@
-
 <div class="flex flex-wrap justify-content-center">
     <div class="mr-4" *ngFor="let cinema of cinemas; index as i">
         <app-cinema-card [cinema]="cinema"></app-cinema-card>
+    </div>
 </div>
-
