--- a/frontend/src/app/shared/components/option-card/option-card.component.html
+++ b/frontend/src/app/shared/components/option-card/option-card.component.html
@@ -1,12 +1,13 @@
 <div class="mx-2 my-4">
-    <a [routerLink]="option.url" class="no-underline">
-        <p-card [style]="{width: '360px', height: '275px'}" styleClass="transition-colors transition-duration-200 bg-red-600 hover:bg-red-400">
+    <a [routerLink]="url" class="no-underline">
+        <p-card [style]="{width: '360px', height: '275px'}"
+            styleClass="transition-colors transition-duration-200 bg-red-600 hover:bg-red-400">
             <ng-template pTemplate="header">
-                <img alt="Card" src={{option.imagePath}} width="100%" height="200">
+                <img alt="Card" src={{imagePath}} width="100%" height="200">
             </ng-template>
             <ng-template pTemplate="subtitle">
                 <div class="flex justify-content-center text-color">
-                    <h2 class="m-0">{{option.title}}</h2>
+                    <h2 class="m-0">{{name}}</h2>
                 </div>
             </ng-template>
         </p-card>
