--- a/frontend/src/app/modules/admin/pages/functions/components/function-table/function-table.component.html
+++ b/frontend/src/app/modules/admin/pages/functions/components/function-table/function-table.component.html
@@ -19,8 +19,8 @@
             <td>{{function_.from | date:'shortTime'}}</td>
             <td>{{function_.to | date:'shortTime'}}</td>
             <td>
-                <p-button label="Editar" (onClick)="handleShow(function_)" iconPos="right" icon="pi pi-pencil"
-                    styleClass="p-button-sm p-button-success mr-2"></p-button>
+                <p-button label="Ver detalles" (onClick)="handleShow(function_)" iconPos="right" icon="pi pi-info-circle"
+                    styleClass="p-button-sm p-button-info mr-2"></p-button>
                 <p-button label="Eliminar" (onClick)="handleDelete(function_._id)" iconPos="right" icon="pi pi-trash"
                     styleClass="p-button-sm p-button-danger">
                 </p-button>
